Aggiornamento algoritmo euristico

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "13321604",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "0be3be4c",
    "metadata": {},
    "outputs": [
@@ -277,13 +277,122 @@
        " ((10, 11), 0)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "savings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "35f60eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ordino i saving in ordine decrescente\n",
+    "savings.sort(key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84cb5c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((7, 8), 144),\n",
+       " ((8, 10), 109),\n",
+       " ((7, 10), 107),\n",
+       " ((3, 5), 79),\n",
+       " ((6, 9), 74),\n",
+       " ((3, 4), 71),\n",
+       " ((1, 8), 64),\n",
+       " ((1, 7), 64),\n",
+       " ((1, 10), 61),\n",
+       " ((4, 5), 60),\n",
+       " ((2, 8), 58),\n",
+       " ((2, 10), 57),\n",
+       " ((2, 7), 54),\n",
+       " ((2, 9), 52),\n",
+       " ((2, 6), 44),\n",
+       " ((5, 8), 37),\n",
+       " ((5, 7), 36),\n",
+       " ((1, 2), 32),\n",
+       " ((1, 5), 31),\n",
+       " ((8, 9), 28),\n",
+       " ((9, 10), 27),\n",
+       " ((5, 10), 26),\n",
+       " ((7, 9), 24),\n",
+       " ((6, 10), 22),\n",
+       " ((6, 8), 21),\n",
+       " ((3, 8), 19),\n",
+       " ((6, 7), 18),\n",
+       " ((3, 7), 18),\n",
+       " ((1, 3), 18),\n",
+       " ((4, 9), 16),\n",
+       " ((4, 6), 13),\n",
+       " ((3, 10), 13),\n",
+       " ((1, 9), 10),\n",
+       " ((1, 6), 9),\n",
+       " ((1, 4), 8),\n",
+       " ((4, 8), 6),\n",
+       " ((4, 7), 6),\n",
+       " ((2, 5), 5),\n",
+       " ((3, 9), 4),\n",
+       " ((4, 10), 3),\n",
+       " ((3, 6), 3),\n",
+       " ((10, 11), 0),\n",
+       " ((9, 11), 0),\n",
+       " ((8, 11), 0),\n",
+       " ((7, 11), 0),\n",
+       " ((6, 11), 0),\n",
+       " ((5, 11), 0),\n",
+       " ((5, 9), 0),\n",
+       " ((5, 6), 0),\n",
+       " ((4, 11), 0),\n",
+       " ((3, 11), 0),\n",
+       " ((2, 11), 0),\n",
+       " ((2, 4), 0),\n",
+       " ((2, 3), 0),\n",
+       " ((1, 11), 0),\n",
+       " ((0, 10), 0),\n",
+       " ((0, 9), 0),\n",
+       " ((0, 8), 0),\n",
+       " ((0, 7), 0),\n",
+       " ((0, 6), 0),\n",
+       " ((0, 5), 0),\n",
+       " ((0, 4), 0),\n",
+       " ((0, 3), 0),\n",
+       " ((0, 2), 0),\n",
+       " ((0, 1), 0)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "savings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ca43459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inizializzo ogni punto vendita come rotta separata\n",
+    "rotte = []\n",
+    "for i in P:\n",
+    "    rotte.append(i)"
    ]
   }
  ],
