--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -109,7 +109,7 @@
       " 83.26198455 77.81567509 87.00121482 97.86183422 79.91585642 52.88949198]\n",
       "[(0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (0, 10), (1, 0), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (1, 10), (1, 11), (2, 0), (2, 1), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (2, 10), (2, 11), (3, 0), (3, 1), (3, 2), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (3, 10), (3, 11), (4, 0), (4, 1), (4, 2), (4, 3), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (4, 10), (4, 11), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 6), (5, 7), (5, 8), (5, 9), (5, 10), (5, 11), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 7), (6, 8), (6, 9), (6, 10), (6, 11), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 8), (7, 9), (7, 10), (7, 11), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 9), (8, 10), (8, 11), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 10), (9, 11), (10, 0), (10, 1), (10, 2), (10, 3), (10, 4), (10, 5), (10, 6), (10, 7), (10, 8), (10, 9), (10, 11), (11, 1), (11, 2), (11, 3), (11, 4), (11, 5), (11, 6), (11, 7), (11, 8), (11, 9), (11, 10)]\n",
       "{(0, 1): 5, (0, 2): 5, (0, 3): 5, (0, 4): 9, (0, 5): 2, (0, 6): 3, (0, 7): 11, (0, 8): 11, (0, 9): 2, (0, 10): 12, (1, 0): 6, (1, 2): 9, (1, 3): 5, (1, 4): 13, (1, 5): 4, (1, 6): 9, (1, 7): 14, (1, 8): 4, (1, 9): 2, (1, 10): 2, (1, 11): 6, (2, 0): 7, (2, 1): 7, (2, 3): 8, (2, 4): 10, (2, 5): 6, (2, 6): 3, (2, 7): 6, (2, 8): 11, (2, 9): 12, (2, 10): 12, (2, 11): 10, (3, 0): 3, (3, 1): 3, (3, 2): 9, (3, 4): 11, (3, 5): 11, (3, 6): 5, (3, 7): 8, (3, 8): 9, (3, 9): 13, (3, 10): 4, (3, 11): 13, (4, 0): 2, (4, 1): 5, (4, 2): 7, (4, 3): 14, (4, 5): 11, (4, 6): 12, (4, 7): 6, (4, 8): 13, (4, 9): 6, (4, 10): 8, (4, 11): 6, (5, 0): 6, (5, 1): 5, (5, 2): 14, (5, 3): 6, (5, 4): 6, (5, 6): 10, (5, 7): 6, (5, 8): 5, (5, 9): 12, (5, 10): 9, (5, 11): 7, (6, 0): 7, (6, 1): 2, (6, 2): 3, (6, 3): 7, (6, 4): 11, (6, 5): 5, (6, 7): 2, (6, 8): 7, (6, 9): 2, (6, 10): 3, (6, 11): 4, (7, 0): 6, (7, 1): 4, (7, 2): 2, (7, 3): 5, (7, 4): 4, (7, 5): 12, (7, 6): 2, (7, 8): 9, (7, 9): 7, (7, 10): 11, (7, 11): 2, (8, 0): 12, (8, 1): 4, (8, 2): 13, (8, 3): 12, (8, 4): 9, (8, 5): 13, (8, 6): 4, (8, 7): 11, (8, 9): 4, (8, 10): 5, (8, 11): 13, (9, 0): 5, (9, 1): 4, (9, 2): 5, (9, 3): 6, (9, 4): 3, (9, 5): 4, (9, 6): 13, (9, 7): 11, (9, 8): 12, (9, 10): 3, (9, 11): 6, (10, 0): 12, (10, 1): 8, (10, 2): 13, (10, 3): 10, (10, 4): 13, (10, 5): 4, (10, 6): 5, (10, 7): 2, (10, 8): 2, (10, 9): 8, (10, 11): 2, (11, 1): 8, (11, 2): 5, (11, 3): 12, (11, 4): 5, (11, 5): 10, (11, 6): 14, (11, 7): 10, (11, 8): 10, (11, 9): 4, (11, 10): 5}\n",
-      "{(0, 1): 33, (0, 2): 41, (0, 3): 45, (0, 4): 50, (0, 5): 54, (0, 6): 37, (0, 7): 72, (0, 8): 89, (0, 9): 55, (0, 10): 55, (1, 0): 33, (1, 2): 42, (1, 3): 60, (1, 4): 75, (1, 5): 56, (1, 6): 61, (1, 7): 41, (1, 8): 58, (1, 9): 78, (1, 10): 27, (1, 11): 33, (2, 0): 41, (2, 1): 42, (2, 3): 86, (2, 4): 91, (2, 5): 90, (2, 6): 34, (2, 7): 59, (2, 8): 72, (2, 9): 44, (2, 10): 39, (2, 11): 41, (3, 0): 45, (3, 1): 60, (3, 2): 86, (3, 4): 24, (3, 5): 20, (3, 6): 79, (3, 7): 99, (3, 8): 115, (3, 9): 96, (3, 10): 87, (3, 11): 45, (4, 0): 50, (4, 1): 75, (4, 2): 91, (4, 3): 24, (4, 5): 44, (4, 6): 74, (4, 7): 116, (4, 8): 133, (4, 9): 89, (4, 10): 102, (4, 11): 50, (5, 0): 54, (5, 1): 56, (5, 2): 90, (5, 3): 20, (5, 4): 44, (5, 6): 91, (5, 7): 90, (5, 8): 106, (5, 9): 109, (5, 10): 83, (5, 11): 54, (6, 0): 37, (6, 1): 61, (6, 2): 34, (6, 3): 79, (6, 4): 74, (6, 5): 91, (6, 7): 91, (6, 8): 105, (6, 9): 18, (6, 10): 70, (6, 11): 37, (7, 0): 72, (7, 1): 41, (7, 2): 59, (7, 3): 99, (7, 4): 116, (7, 5): 90, (7, 6): 91, (7, 8): 17, (7, 9): 103, (7, 10): 20, (7, 11): 72, (8, 0): 89, (8, 1): 58, (8, 2): 72, (8, 3): 115, (8, 4): 133, (8, 5): 106, (8, 6): 105, (8, 7): 17, (8, 9): 116, (8, 10): 35, (8, 11): 89, (9, 0): 55, (9, 1): 78, (9, 2): 44, (9, 3): 96, (9, 4): 89, (9, 5): 109, (9, 6): 18, (9, 7): 103, (9, 8): 116, (9, 10): 83, (9, 11): 55, (10, 0): 55, (10, 1): 27, (10, 2): 39, (10, 3): 87, (10, 4): 102, (10, 5): 83, (10, 6): 70, (10, 7): 20, (10, 8): 35, (10, 9): 83, (10, 11): 55, (11, 1): 33, (11, 2): 41, (11, 3): 45, (11, 4): 50, (11, 5): 54, (11, 6): 37, (11, 7): 72, (11, 8): 89, (11, 9): 55, (11, 10): 55}\n",
+      "t;{(0, 1): 33, (0, 2): 41, (0, 3): 45, (0, 4): 50, (0, 5): 54, (0, 6): 37, (0, 7): 72, (0, 8): 89, (0, 9): 55, (0, 10): 55, (1, 0): 33, (1, 2): 42, (1, 3): 60, (1, 4): 75, (1, 5): 56, (1, 6): 61, (1, 7): 41, (1, 8): 58, (1, 9): 78, (1, 10): 27, (1, 11): 33, (2, 0): 41, (2, 1): 42, (2, 3): 86, (2, 4): 91, (2, 5): 90, (2, 6): 34, (2, 7): 59, (2, 8): 72, (2, 9): 44, (2, 10): 39, (2, 11): 41, (3, 0): 45, (3, 1): 60, (3, 2): 86, (3, 4): 24, (3, 5): 20, (3, 6): 79, (3, 7): 99, (3, 8): 115, (3, 9): 96, (3, 10): 87, (3, 11): 45, (4, 0): 50, (4, 1): 75, (4, 2): 91, (4, 3): 24, (4, 5): 44, (4, 6): 74, (4, 7): 116, (4, 8): 133, (4, 9): 89, (4, 10): 102, (4, 11): 50, (5, 0): 54, (5, 1): 56, (5, 2): 90, (5, 3): 20, (5, 4): 44, (5, 6): 91, (5, 7): 90, (5, 8): 106, (5, 9): 109, (5, 10): 83, (5, 11): 54, (6, 0): 37, (6, 1): 61, (6, 2): 34, (6, 3): 79, (6, 4): 74, (6, 5): 91, (6, 7): 91, (6, 8): 105, (6, 9): 18, (6, 10): 70, (6, 11): 37, (7, 0): 72, (7, 1): 41, (7, 2): 59, (7, 3): 99, (7, 4): 116, (7, 5): 90, (7, 6): 91, (7, 8): 17, (7, 9): 103, (7, 10): 20, (7, 11): 72, (8, 0): 89, (8, 1): 58, (8, 2): 72, (8, 3): 115, (8, 4): 133, (8, 5): 106, (8, 6): 105, (8, 7): 17, (8, 9): 116, (8, 10): 35, (8, 11): 89, (9, 0): 55, (9, 1): 78, (9, 2): 44, (9, 3): 96, (9, 4): 89, (9, 5): 109, (9, 6): 18, (9, 7): 103, (9, 8): 116, (9, 10): 83, (9, 11): 55, (10, 0): 55, (10, 1): 27, (10, 2): 39, (10, 3): 87, (10, 4): 102, (10, 5): 83, (10, 6): 70, (10, 7): 20, (10, 8): 35, (10, 9): 83, (10, 11): 55, (11, 1): 33, (11, 2): 41, (11, 3): 45, (11, 4): 50, (11, 5): 54, (11, 6): 37, (11, 7): 72, (11, 8): 89, (11, 9): 55, (11, 10): 55}\n",
       "{1: 14, 2: 10, 3: 13, 4: 13, 5: 13, 6: 11, 7: 13, 8: 12, 9: 14, 10: 10, 0: 0, 11: 0}\n",
       "{0: 0, 1: 10, 2: 10, 3: 10, 4: 20, 5: 20, 6: 20, 7: 40, 8: 40, 9: 40, 10: 40, 11: 0}\n",
       "{0: 200, 1: 500, 2: 500, 3: 600, 4: 650, 5: 650, 6: 650, 7: 680, 8: 680, 9: 680, 10: 680, 11: 700}\n",
@@ -126,7 +126,7 @@
     "print(yc)\n",
     "print(A)\n",
     "print(c)\n",
-    "print(t)\n",
+    "print(f\"t;{t}\")\n",
     "print(d)\n",
     "print(a)\n",
     "print(b)\n",
@@ -185,20 +185,20 @@
     "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
     "                # tali nodi\n",
     "            if i==0 and j==0:                             \n",
-    "                s = 0\n",
+    "                sav = 0\n",
     "            elif i==0:\n",
-    "                s = t[0,j] - t[i,j]\n",
+    "                sav = t[0,j] - t[i,j]\n",
     "            elif j==0:\n",
-    "                s = t[0,i] - t[i,j]\n",
+    "                sav = t[0,i] - t[i,j]\n",
     "            elif i==n+1 and j==n+1:                   \n",
-    "                s = 0\n",
+    "                sav = 0\n",
     "            elif i==n+1:\n",
-    "                s = t[0,j] - t[i,j]\n",
+    "                sav = t[0,j] - t[i,j]\n",
     "            elif j==n+1:\n",
-    "                s = t[0,i] - t[i,j]\n",
+    "                sav = t[0,i] - t[i,j]\n",
     "            else:\n",
-    "                s = t[0,i] + t[0,j] - t[i,j]\n",
-    "            savings.append(((N[i], N[j]), s))"
+    "                sav = t[0,i] + t[0,j] - t[i,j]\n",
+    "            savings.append(((N[i], N[j]), sav))"
    ]
   },
   {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "35f60eda",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "84cb5c78",
    "metadata": {},
    "outputs": [
@@ -312,8 +312,8 @@
        " ((3, 5), 79),\n",
        " ((6, 9), 74),\n",
        " ((3, 4), 71),\n",
-       " ((1, 8), 64),\n",
        " ((1, 7), 64),\n",
+       " ((1, 8), 64),\n",
        " ((1, 10), 61),\n",
        " ((4, 5), 60),\n",
        " ((2, 8), 58),\n",
@@ -332,48 +332,48 @@
        " ((6, 10), 22),\n",
        " ((6, 8), 21),\n",
        " ((3, 8), 19),\n",
-       " ((6, 7), 18),\n",
-       " ((3, 7), 18),\n",
        " ((1, 3), 18),\n",
+       " ((3, 7), 18),\n",
+       " ((6, 7), 18),\n",
        " ((4, 9), 16),\n",
-       " ((4, 6), 13),\n",
        " ((3, 10), 13),\n",
+       " ((4, 6), 13),\n",
        " ((1, 9), 10),\n",
        " ((1, 6), 9),\n",
        " ((1, 4), 8),\n",
-       " ((4, 8), 6),\n",
        " ((4, 7), 6),\n",
+       " ((4, 8), 6),\n",
        " ((2, 5), 5),\n",
        " ((3, 9), 4),\n",
-       " ((4, 10), 3),\n",
        " ((3, 6), 3),\n",
-       " ((10, 11), 0),\n",
-       " ((9, 11), 0),\n",
-       " ((8, 11), 0),\n",
-       " ((7, 11), 0),\n",
-       " ((6, 11), 0),\n",
-       " ((5, 11), 0),\n",
-       " ((5, 9), 0),\n",
-       " ((5, 6), 0),\n",
-       " ((4, 11), 0),\n",
-       " ((3, 11), 0),\n",
-       " ((2, 11), 0),\n",
-       " ((2, 4), 0),\n",
-       " ((2, 3), 0),\n",
-       " ((1, 11), 0),\n",
-       " ((0, 10), 0),\n",
-       " ((0, 9), 0),\n",
-       " ((0, 8), 0),\n",
-       " ((0, 7), 0),\n",
-       " ((0, 6), 0),\n",
-       " ((0, 5), 0),\n",
-       " ((0, 4), 0),\n",
-       " ((0, 3), 0),\n",
+       " ((4, 10), 3),\n",
+       " ((0, 1), 0),\n",
        " ((0, 2), 0),\n",
-       " ((0, 1), 0)]"
+       " ((0, 3), 0),\n",
+       " ((0, 4), 0),\n",
+       " ((0, 5), 0),\n",
+       " ((0, 6), 0),\n",
+       " ((0, 7), 0),\n",
+       " ((0, 8), 0),\n",
+       " ((0, 9), 0),\n",
+       " ((0, 10), 0),\n",
+       " ((1, 11), 0),\n",
+       " ((2, 3), 0),\n",
+       " ((2, 4), 0),\n",
+       " ((2, 11), 0),\n",
+       " ((3, 11), 0),\n",
+       " ((4, 11), 0),\n",
+       " ((5, 6), 0),\n",
+       " ((5, 9), 0),\n",
+       " ((5, 11), 0),\n",
+       " ((6, 11), 0),\n",
+       " ((7, 11), 0),\n",
+       " ((8, 11), 0),\n",
+       " ((9, 11), 0),\n",
+       " ((10, 11), 0)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7ca43459",
    "metadata": {},
    "outputs": [],
@@ -393,6 +393,104 @@
     "rotte = []\n",
     "for i in P:\n",
     "    rotte.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1c6ec73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rotte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5767917f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verifica della capacità\n",
+    "def verifica_capacità (rotta, d, capacità):\n",
+    "    domanda_totale = 0\n",
+    "    for i in rotta:\n",
+    "        domanda_totale += d[i]\n",
+    "    #print(f\"Domanda totale = {domanda_totale}\")\n",
+    "    return domanda_totale <= capacità "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eebcc1c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verifica_finestra (rotta, t, s, a, b, veicolo_id):\n",
+    "    tempo_corrente = 0\n",
+    "    nodo_precedente = 0                     # Deposito corrente\n",
+    "\n",
+    "    for i in rotta:\n",
+    "        tempo_corrente += t[nodo_precedente, i]\n",
+    "\n",
+    "        # Nel caso in cui arrivo prima dell'apertura, aspetto\n",
+    "        if tempo_corrente < a[i]:\n",
+    "            tempo_corrente = a[i]\n",
+    "\n",
+    "        # Nel caso in cui arrivo dopo la chiusura, non è rispettato il vincolo\n",
+    "        if tempo_corrente > b[i]:\n",
+    "            return False\n",
+    "\n",
+    "        # Aggiunta del tempo di servizio\n",
+    "        print(s[i, veicolo_id])\n",
+    "        tempo_corrente += s[i, veicolo_id]\n",
+    "        nodo_precedente = i\n",
+    "\n",
+    "    # Verifico se è ritornato al deposito t\n",
+    "    tempo_corrente += t[nodo_precedente, n+1]\n",
+    "    if tempo_corrente > b[n+1]:\n",
+    "        return False\n",
+    "    \n",
+    "    print(tempo_corrente)\n",
+    "\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b562ca9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "358\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "rotta1 = [[1,4,6,7], [2,8,9]]\n",
+    "print(verifica_finestra(rotta1[0], t, s, a, b, 1))"
    ]
   }
  ],
