--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -172,253 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13321604",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calcolo savings\n",
-    "savings = []\n",
-    "for i in range(len(N)):\n",
-    "    for j in range(i+1, len(N)):\n",
-    "        if (i,j) in A:\n",
-    "            # Il tempo di percorrenza t precedentemente non era stato calcolato per i nodi\n",
-    "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
-    "                # tali nodi\n",
-    "            if i==0 and j==0:                             \n",
-    "                sav = 0\n",
-    "            elif i==0:\n",
-    "                sav = t[0,j] - t[i,j]\n",
-    "            elif j==0:\n",
-    "                sav = t[0,i] - t[i,j]\n",
-    "            elif i==n+1 and j==n+1:                   \n",
-    "                sav = 0\n",
-    "            elif i==n+1:\n",
-    "                sav = t[0,j] - t[i,j]\n",
-    "            elif j==n+1:\n",
-    "                sav = t[0,i] - t[i,j]\n",
-    "            else:\n",
-    "                sav = t[0,i] + t[0,j] - t[i,j]\n",
-    "            savings.append(((N[i], N[j]), sav))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0be3be4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 1), 0),\n",
-       " ((0, 2), 0),\n",
-       " ((0, 3), 0),\n",
-       " ((0, 4), 0),\n",
-       " ((0, 5), 0),\n",
-       " ((0, 6), 0),\n",
-       " ((0, 7), 0),\n",
-       " ((0, 8), 0),\n",
-       " ((0, 9), 0),\n",
-       " ((0, 10), 0),\n",
-       " ((1, 2), 32),\n",
-       " ((1, 3), 18),\n",
-       " ((1, 4), 8),\n",
-       " ((1, 5), 31),\n",
-       " ((1, 6), 9),\n",
-       " ((1, 7), 64),\n",
-       " ((1, 8), 64),\n",
-       " ((1, 9), 10),\n",
-       " ((1, 10), 61),\n",
-       " ((1, 11), 0),\n",
-       " ((2, 3), 0),\n",
-       " ((2, 4), 0),\n",
-       " ((2, 5), 5),\n",
-       " ((2, 6), 44),\n",
-       " ((2, 7), 54),\n",
-       " ((2, 8), 58),\n",
-       " ((2, 9), 52),\n",
-       " ((2, 10), 57),\n",
-       " ((2, 11), 0),\n",
-       " ((3, 4), 71),\n",
-       " ((3, 5), 79),\n",
-       " ((3, 6), 3),\n",
-       " ((3, 7), 18),\n",
-       " ((3, 8), 19),\n",
-       " ((3, 9), 4),\n",
-       " ((3, 10), 13),\n",
-       " ((3, 11), 0),\n",
-       " ((4, 5), 60),\n",
-       " ((4, 6), 13),\n",
-       " ((4, 7), 6),\n",
-       " ((4, 8), 6),\n",
-       " ((4, 9), 16),\n",
-       " ((4, 10), 3),\n",
-       " ((4, 11), 0),\n",
-       " ((5, 6), 0),\n",
-       " ((5, 7), 36),\n",
-       " ((5, 8), 37),\n",
-       " ((5, 9), 0),\n",
-       " ((5, 10), 26),\n",
-       " ((5, 11), 0),\n",
-       " ((6, 7), 18),\n",
-       " ((6, 8), 21),\n",
-       " ((6, 9), 74),\n",
-       " ((6, 10), 22),\n",
-       " ((6, 11), 0),\n",
-       " ((7, 8), 144),\n",
-       " ((7, 9), 24),\n",
-       " ((7, 10), 107),\n",
-       " ((7, 11), 0),\n",
-       " ((8, 9), 28),\n",
-       " ((8, 10), 109),\n",
-       " ((8, 11), 0),\n",
-       " ((9, 10), 27),\n",
-       " ((9, 11), 0),\n",
-       " ((10, 11), 0)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "savings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "35f60eda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ordino i saving in ordine decrescente\n",
-    "savings.sort(key=lambda x: x[1], reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "84cb5c78",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((7, 8), 144),\n",
-       " ((8, 10), 109),\n",
-       " ((7, 10), 107),\n",
-       " ((3, 5), 79),\n",
-       " ((6, 9), 74),\n",
-       " ((3, 4), 71),\n",
-       " ((1, 7), 64),\n",
-       " ((1, 8), 64),\n",
-       " ((1, 10), 61),\n",
-       " ((4, 5), 60),\n",
-       " ((2, 8), 58),\n",
-       " ((2, 10), 57),\n",
-       " ((2, 7), 54),\n",
-       " ((2, 9), 52),\n",
-       " ((2, 6), 44),\n",
-       " ((5, 8), 37),\n",
-       " ((5, 7), 36),\n",
-       " ((1, 2), 32),\n",
-       " ((1, 5), 31),\n",
-       " ((8, 9), 28),\n",
-       " ((9, 10), 27),\n",
-       " ((5, 10), 26),\n",
-       " ((7, 9), 24),\n",
-       " ((6, 10), 22),\n",
-       " ((6, 8), 21),\n",
-       " ((3, 8), 19),\n",
-       " ((1, 3), 18),\n",
-       " ((3, 7), 18),\n",
-       " ((6, 7), 18),\n",
-       " ((4, 9), 16),\n",
-       " ((3, 10), 13),\n",
-       " ((4, 6), 13),\n",
-       " ((1, 9), 10),\n",
-       " ((1, 6), 9),\n",
-       " ((1, 4), 8),\n",
-       " ((4, 7), 6),\n",
-       " ((4, 8), 6),\n",
-       " ((2, 5), 5),\n",
-       " ((3, 9), 4),\n",
-       " ((3, 6), 3),\n",
-       " ((4, 10), 3),\n",
-       " ((0, 1), 0),\n",
-       " ((0, 2), 0),\n",
-       " ((0, 3), 0),\n",
-       " ((0, 4), 0),\n",
-       " ((0, 5), 0),\n",
-       " ((0, 6), 0),\n",
-       " ((0, 7), 0),\n",
-       " ((0, 8), 0),\n",
-       " ((0, 9), 0),\n",
-       " ((0, 10), 0),\n",
-       " ((1, 11), 0),\n",
-       " ((2, 3), 0),\n",
-       " ((2, 4), 0),\n",
-       " ((2, 11), 0),\n",
-       " ((3, 11), 0),\n",
-       " ((4, 11), 0),\n",
-       " ((5, 6), 0),\n",
-       " ((5, 9), 0),\n",
-       " ((5, 11), 0),\n",
-       " ((6, 11), 0),\n",
-       " ((7, 11), 0),\n",
-       " ((8, 11), 0),\n",
-       " ((9, 11), 0),\n",
-       " ((10, 11), 0)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "savings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7ca43459",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inizializzo ogni punto vendita come rotta separata\n",
-    "rotte = []\n",
-    "for i in P:\n",
-    "    rotte.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1c6ec73e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rotte"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "5767917f",
    "metadata": {},
    "outputs": [],
@@ -434,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "eebcc1c5",
    "metadata": {},
    "outputs": [],
@@ -471,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "b562ca9c",
    "metadata": {},
    "outputs": [
@@ -491,6 +244,84 @@
    "source": [
     "rotta1 = [[1,4,6,7], [2,8,9]]\n",
     "print(verifica_finestra(rotta1[0], t, s, a, b, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ca43459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Primo step\n",
+    "# Inizializzazione di ogni punto vendita come rotta separata\n",
+    "rotte = []\n",
+    "for k in V:\n",
+    "    rotte = {k: [] for k in V}\n",
+    "\n",
+    "rotte_attive = []\n",
+    "for i in P:\n",
+    "    rotte_attive.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "13321604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Secondo step \n",
+    "# Calcolo savings\n",
+    "savings = []\n",
+    "for i in range(len(N)):\n",
+    "    for j in range(i+1, len(N)):\n",
+    "        if (i,j) in A:\n",
+    "            # Il tempo di percorrenza t precedentemente non era stato calcolato per i nodi\n",
+    "                # (0,0), (0,11), (11,0) e (11,11). Di conseguenza è stato necessario escludere \n",
+    "                # tali nodi\n",
+    "            if i==0 and j==0:                             \n",
+    "                sav = 0\n",
+    "            elif i==0:\n",
+    "                sav = t[0,j] - t[i,j]\n",
+    "            elif j==0:\n",
+    "                sav = t[0,i] - t[i,j]\n",
+    "            elif i==n+1 and j==n+1:                   \n",
+    "                sav = 0\n",
+    "            elif i==n+1:\n",
+    "                sav = t[0,j] - t[i,j]\n",
+    "            elif j==n+1:\n",
+    "                sav = t[0,i] - t[i,j]\n",
+    "            else:\n",
+    "                sav = t[0,i] + t[0,j] - t[i,j]\n",
+    "            savings.append(((N[i], N[j]), sav))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "35f60eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ordinamento dei saving in ordine decrescente\n",
+    "savings.sort(key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f0c0b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Terzo step\n",
+    "# Assegnazione veicoli e fusione delle rotte\n",
+    "veicoli_disponibili = []\n",
+    "for k in V:\n",
+    "    veicoli_disponibili.append(i)\n",
+    "\n",
+    "assegnazione = {}          # Lista di associazione di ogni rotta al veicolo\n"
    ]
   }
  ],
