Aggiornamento algoritmo euristico 4

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Verifica della capacità\n",
+    "# Verifica del vincolo della capacità\n",
     "def verifica_capacità (rotta, d, capacità):\n",
     "    domanda_totale = 0\n",
     "    for i in rotta:\n",
@@ -192,9 +192,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Verifica del vincolo sulla finestra temporale\n",
     "def verifica_finestra (rotta, t, s, a, b, veicolo_id):\n",
     "    tempo_corrente = 0\n",
-    "    nodo_precedente = 0                     # Deposito corrente\n",
+    "    nodo_precedente = 0                     # Deposito di partenza\n",
     "\n",
     "    for i in rotta:\n",
     "        tempo_corrente += t[nodo_precedente, i]\n",
@@ -213,9 +214,10 @@
     "        nodo_precedente = i\n",
     "\n",
     "    # Verifico se è ritornato al deposito t\n",
-    "    tempo_corrente += t[nodo_precedente, n+1]\n",
-    "    if tempo_corrente > b[n+1]:\n",
-    "        return False\n",
+    "    if (nodo_precedente, n+1) in t:\n",
+    "        tempo_corrente += t[nodo_precedente, n+1]\n",
+    "        if tempo_corrente > b[n+1]:\n",
+    "            return False\n",
     "    \n",
     "    print(tempo_corrente)\n",
     "\n",
@@ -249,6 +251,53 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "afc64510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Si trova la rotta che contiene un nodo estremo e il suo indice\n",
+    "def trova_rotta_contenente (i, rotte_attive):\n",
+    "    # Scorro tra i nodi delle rotte attive\n",
+    "    for r_attiva in rotte_attive:\n",
+    "        if i in r_attiva:\n",
+    "            indice = r_attiva.index(i)\n",
+    "            # Si controlla che sia un estremo\n",
+    "            if indice==0 or indice==len(r_attiva)-1:\n",
+    "                return r_attiva, indice\n",
+    "    return None, -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5ce180b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unione delle rotte\n",
+    "def unisci_rotte (rotta_i, rotta_j, indice_i, indice_j):\n",
+    "\n",
+    "    # Sono effettuati vari controlli\n",
+    "\n",
+    "    # i è l'ultimo di rotta_i, mentre j è il primo di rotta_j\n",
+    "    if indice_i==len(rotta_i)-1 and indice_j==0:\n",
+    "        return rotta_i + rotta_j\n",
+    "    # j è l'ultimo di rotta_j, mentre i è il primo di rotta_i\n",
+    "    elif indice_j==len(rotta_j)-1 and indice_i==0:\n",
+    "        return rotta_j + rotta_i\n",
+    "    # i è l'ultimo di rotta_i, mentre j è l'ultimo di rotta_j\n",
+    "    elif indice_i==len(rotta_i)-1 and indice_j==len(rotta_j)-1:\n",
+    "        return rotta_i + rotta_j[::-1]\n",
+    "    # i è il primo di rotta_i, mentre j è il primo di rotta_j\n",
+    "    elif indice_i==0 and indice_j==0:\n",
+    "        return rotta_i[::-1] + rotta_j\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "7ca43459",
    "metadata": {},
    "outputs": [],
@@ -259,14 +308,51 @@
     "for k in V:\n",
     "    rotte = {k: [] for k in V}\n",
     "\n",
-    "rotte_attive = []\n",
-    "for i in P:\n",
-    "    rotte_attive.append(i)"
+    "# Inizializzo ogni punto vendita come rotta separata\n",
+    "rotte_attive = [[i] for i in P]\n",
+    "\n",
+    "assegnazione = {}          # Lista di associazione di ogni rotta al veicolo\n",
+    "\n",
+    "for r_attiva in rotte_attive:\n",
+    "    for k in V:\n",
+    "        if verifica_capacità(r_attiva, d, Q[k]):\n",
+    "            assegnazione[tuple(r_attiva)] = k\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "id": "753c81bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1,): 1,\n",
+       " (2,): 1,\n",
+       " (3,): 1,\n",
+       " (4,): 1,\n",
+       " (5,): 1,\n",
+       " (6,): 1,\n",
+       " (7,): 1,\n",
+       " (8,): 1,\n",
+       " (9,): 1,\n",
+       " (10,): 1}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assegnazione"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "13321604",
    "metadata": {},
    "outputs": [],
@@ -283,23 +369,108 @@
     "            if i==0 and j==0:                             \n",
     "                sav = 0\n",
     "            elif i==0:\n",
-    "                sav = t[0,j] - t[i,j]\n",
+    "                sav = c[0,j] - c[i,j]\n",
     "            elif j==0:\n",
-    "                sav = t[0,i] - t[i,j]\n",
+    "                sav = c[0,i] - c[i,j]\n",
     "            elif i==n+1 and j==n+1:                   \n",
     "                sav = 0\n",
     "            elif i==n+1:\n",
-    "                sav = t[0,j] - t[i,j]\n",
+    "                sav = c[0,j] - c[i,j]\n",
     "            elif j==n+1:\n",
-    "                sav = t[0,i] - t[i,j]\n",
+    "                sav = c[0,i] - c[i,j]\n",
     "            else:\n",
-    "                sav = t[0,i] + t[0,j] - t[i,j]\n",
+    "                sav =c[0,i] + c[0,j] - c[i,j]\n",
     "            savings.append(((N[i], N[j]), sav))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "id": "5bc2d0f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 1), 0),\n",
+       " ((0, 2), 0),\n",
+       " ((0, 3), 0),\n",
+       " ((0, 4), 0),\n",
+       " ((0, 5), 0),\n",
+       " ((0, 6), 0),\n",
+       " ((0, 7), 0),\n",
+       " ((0, 8), 0),\n",
+       " ((0, 9), 0),\n",
+       " ((0, 10), 0),\n",
+       " ((1, 2), 1),\n",
+       " ((1, 3), 5),\n",
+       " ((1, 4), 1),\n",
+       " ((1, 5), 3),\n",
+       " ((1, 6), -1),\n",
+       " ((1, 7), 2),\n",
+       " ((1, 8), 12),\n",
+       " ((1, 9), 5),\n",
+       " ((1, 10), 15),\n",
+       " ((1, 11), -1),\n",
+       " ((2, 3), 2),\n",
+       " ((2, 4), 4),\n",
+       " ((2, 5), 1),\n",
+       " ((2, 6), 5),\n",
+       " ((2, 7), 10),\n",
+       " ((2, 8), 5),\n",
+       " ((2, 9), -5),\n",
+       " ((2, 10), 5),\n",
+       " ((2, 11), -5),\n",
+       " ((3, 4), 3),\n",
+       " ((3, 5), -4),\n",
+       " ((3, 6), 3),\n",
+       " ((3, 7), 8),\n",
+       " ((3, 8), 7),\n",
+       " ((3, 9), -6),\n",
+       " ((3, 10), 13),\n",
+       " ((3, 11), -8),\n",
+       " ((4, 5), 0),\n",
+       " ((4, 6), 0),\n",
+       " ((4, 7), 14),\n",
+       " ((4, 8), 7),\n",
+       " ((4, 9), 5),\n",
+       " ((4, 10), 13),\n",
+       " ((4, 11), 3),\n",
+       " ((5, 6), -5),\n",
+       " ((5, 7), 7),\n",
+       " ((5, 8), 8),\n",
+       " ((5, 9), -8),\n",
+       " ((5, 10), 5),\n",
+       " ((5, 11), -5),\n",
+       " ((6, 7), 12),\n",
+       " ((6, 8), 7),\n",
+       " ((6, 9), 3),\n",
+       " ((6, 10), 12),\n",
+       " ((6, 11), -1),\n",
+       " ((7, 8), 13),\n",
+       " ((7, 9), 6),\n",
+       " ((7, 10), 12),\n",
+       " ((7, 11), 9),\n",
+       " ((8, 9), 9),\n",
+       " ((8, 10), 18),\n",
+       " ((8, 11), -2),\n",
+       " ((9, 10), 11),\n",
+       " ((9, 11), -4),\n",
+       " ((10, 11), 10)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "savings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "35f60eda",
    "metadata": {},
    "outputs": [],
@@ -310,18 +481,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "fb5372ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((8, 10), 18),\n",
+       " ((1, 10), 15),\n",
+       " ((4, 7), 14),\n",
+       " ((3, 10), 13),\n",
+       " ((4, 10), 13),\n",
+       " ((7, 8), 13),\n",
+       " ((1, 8), 12),\n",
+       " ((6, 7), 12),\n",
+       " ((6, 10), 12),\n",
+       " ((7, 10), 12),\n",
+       " ((9, 10), 11),\n",
+       " ((2, 7), 10),\n",
+       " ((10, 11), 10),\n",
+       " ((7, 11), 9),\n",
+       " ((8, 9), 9),\n",
+       " ((3, 7), 8),\n",
+       " ((5, 8), 8),\n",
+       " ((3, 8), 7),\n",
+       " ((4, 8), 7),\n",
+       " ((5, 7), 7),\n",
+       " ((6, 8), 7),\n",
+       " ((7, 9), 6),\n",
+       " ((1, 3), 5),\n",
+       " ((1, 9), 5),\n",
+       " ((2, 6), 5),\n",
+       " ((2, 8), 5),\n",
+       " ((2, 10), 5),\n",
+       " ((4, 9), 5),\n",
+       " ((5, 10), 5),\n",
+       " ((2, 4), 4),\n",
+       " ((1, 5), 3),\n",
+       " ((3, 4), 3),\n",
+       " ((3, 6), 3),\n",
+       " ((4, 11), 3),\n",
+       " ((6, 9), 3),\n",
+       " ((1, 7), 2),\n",
+       " ((2, 3), 2),\n",
+       " ((1, 2), 1),\n",
+       " ((1, 4), 1),\n",
+       " ((2, 5), 1),\n",
+       " ((0, 1), 0),\n",
+       " ((0, 2), 0),\n",
+       " ((0, 3), 0),\n",
+       " ((0, 4), 0),\n",
+       " ((0, 5), 0),\n",
+       " ((0, 6), 0),\n",
+       " ((0, 7), 0),\n",
+       " ((0, 8), 0),\n",
+       " ((0, 9), 0),\n",
+       " ((0, 10), 0),\n",
+       " ((4, 5), 0),\n",
+       " ((4, 6), 0),\n",
+       " ((1, 6), -1),\n",
+       " ((1, 11), -1),\n",
+       " ((6, 11), -1),\n",
+       " ((8, 11), -2),\n",
+       " ((3, 5), -4),\n",
+       " ((9, 11), -4),\n",
+       " ((2, 9), -5),\n",
+       " ((2, 11), -5),\n",
+       " ((5, 6), -5),\n",
+       " ((5, 11), -5),\n",
+       " ((3, 9), -6),\n",
+       " ((3, 11), -8),\n",
+       " ((5, 9), -8)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "savings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "1f0c0b1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "187\n",
+      "Iterazione 1: Unisco tour [8] e [10]\n",
+      "  Saving: 18.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [8, 10]\n",
+      "Numero di rotte attive: 9\n",
+      "\n",
+      "4\n",
+      "4\n",
+      "3\n",
+      "195\n",
+      "Iterazione 2: Unisco tour [1] e [8, 10]\n",
+      "  Saving: 15.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [8, 10, 1]\n",
+      "Numero di rotte attive: 8\n",
+      "\n",
+      "4\n",
+      "3\n",
+      "245\n",
+      "Iterazione 3: Unisco tour [4] e [7]\n",
+      "  Saving: 14.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [4, 7]\n",
+      "Numero di rotte attive: 7\n",
+      "\n",
+      "Numero di rotte attive: 6\n",
+      "\n",
+      "Numero di rotte attive: 5\n",
+      "\n",
+      "3\n",
+      "3\n",
+      "118\n",
+      "Iterazione 25: Unisco tour [2] e [6]\n",
+      "  Saving: 5.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [2, 6]\n",
+      "Numero di rotte attive: 4\n",
+      "\n",
+      "Numero di rotte attive: 3\n",
+      "\n",
+      "Numero di rotte attive: 2\n",
+      "\n",
+      "Numero di rotte attive: 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Terzo step\n",
-    "# Assegnazione veicoli e fusione delle rotte\n",
-    "veicoli_disponibili = []\n",
-    "for k in V:\n",
-    "    veicoli_disponibili.append(i)\n",
+    "# Iterazione sui savings\n",
+    "iterazione = 0\n",
+    "unioni_effettuate = 0\n",
     "\n",
-    "assegnazione = {}          # Lista di associazione di ogni rotta al veicolo\n"
+    "for (i,j),sav_ij in savings:\n",
+    "    if sav_ij <= 0:             # I savings <= 0 possono essere esclusi\n",
+    "        break\n",
+    "    \n",
+    "    iterazione += 1\n",
+    "\n",
+    "    # Si trovano le rotte contenenti i e j come estremi\n",
+    "    rotta_i, indice_i = trova_rotta_contenente(i, rotte_attive)\n",
+    "    rotta_j, indice_j = trova_rotta_contenente(j, rotte_attive)\n",
+    "\n",
+    "    # Se non sono stati trovati, si saltano\n",
+    "    if rotta_i is None or rotta_j is None or rotta_i==rotta_j:\n",
+    "        continue\n",
+    "\n",
+    "    # Ottieni i veicoli assegnati\n",
+    "    veicolo_i = assegnazione.get(tuple(rotta_i))\n",
+    "    veicolo_j = assegnazione.get(tuple(rotta_j))\n",
+    "\n",
+    "    if veicolo_i is None or veicolo_j is None:\n",
+    "        continue\n",
+    "\n",
+    "    # Tentativo di unione\n",
+    "    nuova_rotta = unisci_rotte(rotta_i, rotta_j, indice_i, indice_j)\n",
+    "\n",
+    "    # Scelta del veicolo con maggiore capacità\n",
+    "    if Q[veicolo_i] >= Q[veicolo_j]:\n",
+    "        veicolo_scelto = veicolo_i\n",
+    "    else:\n",
+    "        veicolo_scelto = veicolo_j\n",
+    "\n",
+    "    # Quarto step\n",
+    "    if (verifica_capacità(nuova_rotta, d, Q[veicolo_scelto])) and (verifica_finestra(nuova_rotta, t, s, a, b, veicolo_scelto)):\n",
+    "        print(f\"Iterazione {iterazione}: Unisco tour {rotta_i} e {rotta_j}\")\n",
+    "        print(f\"  Saving: {sav_ij:.2f}\")\n",
+    "        print(f\"  Veicolo scelto: {veicolo_scelto} (Q={Q[veicolo_scelto]})\")\n",
+    "        print(f\"  Nuovo tour: {nuova_rotta}\")\n",
+    "\n",
+    "    # Rimozione delle vecchie rotte\n",
+    "    rotte_attive.remove(rotta_i)\n",
+    "    rotte_attive.remove(rotta_j)\n",
+    "    del assegnazione[tuple(rotta_i)]\n",
+    "    del assegnazione[tuple(rotta_j)]\n",
+    "\n",
+    "    # Aggiunta della nuova rotta\n",
+    "    rotte_attive.append(nuova_rotta)\n",
+    "    assegnazione[tuple(nuova_rotta)] = veicolo_scelto\n",
+    "    unioni_effettuate += 1\n",
+    "\n",
+    "    print(f\"Numero di rotte attive: {len(rotte_attive)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4be0b8af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "SOLUZIONE FINALE\n",
+      "======================================================================\n",
+      "Unioni effettuate: 9\n",
+      "Iterazioni totali: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quinto step\n",
+    "rotte_per_veicolo = {k: [] for k in V}\n",
+    "for rotta, veicolo in assegnazione.items():\n",
+    "    rotte_per_veicolo[veicolo].append(list(rotta))\n",
+    "\n",
+    "    print(f\"\\n{'='*70}\")\n",
+    "    print(\"SOLUZIONE FINALE\")\n",
+    "    print(f\"{'='*70}\")\n",
+    "    print(f\"Unioni effettuate: {unioni_effettuate}\")\n",
+    "    print(f\"Iterazioni totali: {iterazione}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d706f8e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [[9, 4, 7, 8, 10, 1, 3, 6, 2, 5]], 2: [], 3: [], 4: []}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rotte_per_veicolo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2457a2b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 4, 7, 8, 10, 1, 3, 6, 2, 5]\n",
+      "Veicolo 1: arco (9,4)\n",
+      "Veicolo 1: arco (4,7)\n",
+      "Veicolo 1: arco (7,8)\n",
+      "Veicolo 1: arco (8,10)\n",
+      "Veicolo 1: arco (10,1)\n",
+      "Veicolo 1: arco (1,3)\n",
+      "Veicolo 1: arco (3,6)\n",
+      "Veicolo 1: arco (6,2)\n",
+      "Veicolo 1: arco (2,5)\n",
+      "Costo totale: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "costo_tot = 0\n",
+    "for veicol, liste_rotte in rotte_per_veicolo.items():\n",
+    "    for rot in liste_rotte:\n",
+    "        print(rot)\n",
+    "        for nodo in range(len(rot)-1):\n",
+    "            i,j = rot[nodo], rot[nodo+1]\n",
+    "            print(f\"Veicolo {veicolo}: arco ({i},{j})\")\n",
+    "            costo_tot += c[i,j]\n",
+    "print(f\"Costo totale: {costo_tot}\")"
    ]
   }
  ],
