Distribuzione veicoli migliorata

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -313,10 +313,17 @@
     "\n",
     "assegnazione = {}          # Lista di associazione di ogni rotta al veicolo\n",
     "\n",
+    "# Distribuzione dei nodi tra i veicoli disponibili\n",
+    "indice_veicolo = 0\n",
     "for r_attiva in rotte_attive:\n",
-    "    for k in V:\n",
+    "    # Trova un veicolo con pacità sufficiente, usando un round-robin per bilanciare\n",
+    "    assegnato = False\n",
+    "    for offset in range(len(V)):\n",
+    "        k = V[(indice_veicolo + offset)%len(V)]\n",
     "        if verifica_capacità(r_attiva, d, Q[k]):\n",
     "            assegnazione[tuple(r_attiva)] = k\n",
+    "            indice_veicolo = (indice_veicolo + 1) % len(V)  # Si passa al prossimo veicolo\n",
+    "            assegnato = True\n",
     "            break"
    ]
   },
@@ -330,15 +337,15 @@
      "data": {
       "text/plain": [
        "{(1,): 1,\n",
-       " (2,): 1,\n",
-       " (3,): 1,\n",
-       " (4,): 1,\n",
+       " (2,): 2,\n",
+       " (3,): 3,\n",
+       " (4,): 4,\n",
        " (5,): 1,\n",
-       " (6,): 1,\n",
-       " (7,): 1,\n",
-       " (8,): 1,\n",
+       " (6,): 2,\n",
+       " (7,): 3,\n",
+       " (8,): 4,\n",
        " (9,): 1,\n",
-       " (10,): 1}"
+       " (10,): 2}"
       ]
      },
      "execution_count": 13,
@@ -579,7 +586,7 @@
       "187\n",
       "Iterazione 1: Unisco tour [8] e [10]\n",
       "  Saving: 18.00\n",
-      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
       "  Nuovo tour: [8, 10]\n",
       "Numero di rotte attive: 9\n",
       "\n",
@@ -593,25 +600,18 @@
       "  Nuovo tour: [8, 10, 1]\n",
       "Numero di rotte attive: 8\n",
       "\n",
-      "4\n",
-      "3\n",
-      "245\n",
-      "Iterazione 3: Unisco tour [4] e [7]\n",
-      "  Saving: 14.00\n",
-      "  Veicolo scelto: 1 (Q=50)\n",
-      "  Nuovo tour: [4, 7]\n",
       "Numero di rotte attive: 7\n",
       "\n",
       "Numero di rotte attive: 6\n",
       "\n",
       "Numero di rotte attive: 5\n",
       "\n",
-      "3\n",
-      "3\n",
-      "118\n",
+      "4\n",
+      "4\n",
+      "120\n",
       "Iterazione 25: Unisco tour [2] e [6]\n",
       "  Saving: 5.00\n",
-      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
       "  Nuovo tour: [2, 6]\n",
       "Numero di rotte attive: 4\n",
       "\n",
@@ -654,11 +654,14 @@
     "    # Tentativo di unione\n",
     "    nuova_rotta = unisci_rotte(rotta_i, rotta_j, indice_i, indice_j)\n",
     "\n",
+    "\n",
     "    # Scelta del veicolo con maggiore capacità\n",
     "    if Q[veicolo_i] >= Q[veicolo_j]:\n",
     "        veicolo_scelto = veicolo_i\n",
     "    else:\n",
     "        veicolo_scelto = veicolo_j\n",
+    "\n",
+    " \n",
     "\n",
     "    # Quarto step\n",
     "    if (verifica_capacità(nuova_rotta, d, Q[veicolo_scelto])) and (verifica_finestra(nuova_rotta, t, s, a, b, veicolo_scelto)):\n",
@@ -736,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "2457a2b2",
    "metadata": {},
    "outputs": [
