Adesso non vanno tutti in un solo veicolo (era un problema di indentazione)

--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -600,11 +600,16 @@
       "  Nuovo tour: [8, 10, 1]\n",
       "Numero di rotte attive: 8\n",
       "\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "3\n",
+      "198\n",
+      "Iterazione 6: Unisco tour [7] e [8, 10, 1]\n",
+      "  Saving: 13.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [7, 8, 10, 1]\n",
       "Numero di rotte attive: 7\n",
-      "\n",
-      "Numero di rotte attive: 6\n",
-      "\n",
-      "Numero di rotte attive: 5\n",
       "\n",
       "4\n",
       "4\n",
@@ -613,13 +618,27 @@
       "  Saving: 5.00\n",
       "  Veicolo scelto: 2 (Q=50)\n",
       "  Nuovo tour: [2, 6]\n",
+      "Numero di rotte attive: 6\n",
+      "\n",
+      "4\n",
+      "3\n",
+      "201\n",
+      "Iterazione 28: Unisco tour [4] e [9]\n",
+      "  Saving: 5.00\n",
+      "  Veicolo scelto: 1 (Q=50)\n",
+      "  Nuovo tour: [4, 9]\n",
+      "Numero di rotte attive: 5\n",
+      "\n",
+      "4\n",
+      "4\n",
+      "3\n",
+      "4\n",
+      "321\n",
+      "Iterazione 30: Unisco tour [2, 6] e [4, 9]\n",
+      "  Saving: 4.00\n",
+      "  Veicolo scelto: 2 (Q=50)\n",
+      "  Nuovo tour: [6, 2, 4, 9]\n",
       "Numero di rotte attive: 4\n",
-      "\n",
-      "Numero di rotte attive: 3\n",
-      "\n",
-      "Numero di rotte attive: 2\n",
-      "\n",
-      "Numero di rotte attive: 1\n",
       "\n"
      ]
     }
@@ -670,18 +689,18 @@
     "        print(f\"  Veicolo scelto: {veicolo_scelto} (Q={Q[veicolo_scelto]})\")\n",
     "        print(f\"  Nuovo tour: {nuova_rotta}\")\n",
     "\n",
-    "    # Rimozione delle vecchie rotte\n",
-    "    rotte_attive.remove(rotta_i)\n",
-    "    rotte_attive.remove(rotta_j)\n",
-    "    del assegnazione[tuple(rotta_i)]\n",
-    "    del assegnazione[tuple(rotta_j)]\n",
+    "        # Rimozione delle vecchie rotte\n",
+    "        rotte_attive.remove(rotta_i)\n",
+    "        rotte_attive.remove(rotta_j)\n",
+    "        del assegnazione[tuple(rotta_i)]\n",
+    "        del assegnazione[tuple(rotta_j)]\n",
     "\n",
-    "    # Aggiunta della nuova rotta\n",
-    "    rotte_attive.append(nuova_rotta)\n",
-    "    assegnazione[tuple(nuova_rotta)] = veicolo_scelto\n",
-    "    unioni_effettuate += 1\n",
+    "        # Aggiunta della nuova rotta\n",
+    "        rotte_attive.append(nuova_rotta)\n",
+    "        assegnazione[tuple(nuova_rotta)] = veicolo_scelto\n",
+    "        unioni_effettuate += 1\n",
     "\n",
-    "    print(f\"Numero di rotte attive: {len(rotte_attive)}\\n\")"
+    "        print(f\"Numero di rotte attive: {len(rotte_attive)}\\n\")"
    ]
   },
   {
@@ -698,7 +717,25 @@
       "======================================================================\n",
       "SOLUZIONE FINALE\n",
       "======================================================================\n",
-      "Unioni effettuate: 9\n",
+      "Unioni effettuate: 6\n",
+      "Iterazioni totali: 40\n",
+      "\n",
+      "======================================================================\n",
+      "SOLUZIONE FINALE\n",
+      "======================================================================\n",
+      "Unioni effettuate: 6\n",
+      "Iterazioni totali: 40\n",
+      "\n",
+      "======================================================================\n",
+      "SOLUZIONE FINALE\n",
+      "======================================================================\n",
+      "Unioni effettuate: 6\n",
+      "Iterazioni totali: 40\n",
+      "\n",
+      "======================================================================\n",
+      "SOLUZIONE FINALE\n",
+      "======================================================================\n",
+      "Unioni effettuate: 6\n",
       "Iterazioni totali: 40\n"
      ]
     }
@@ -725,7 +762,7 @@
     {
      "data": {
       "text/plain": [
-       "{1: [[9, 4, 7, 8, 10, 1, 3, 6, 2, 5]], 2: [], 3: [], 4: []}"
+       "{1: [[5], [7, 8, 10, 1]], 2: [[6, 2, 4, 9]], 3: [[3]], 4: []}"
       ]
      },
      "execution_count": 20,
@@ -747,17 +784,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 4, 7, 8, 10, 1, 3, 6, 2, 5]\n",
-      "Veicolo 1: arco (9,4)\n",
-      "Veicolo 1: arco (4,7)\n",
-      "Veicolo 1: arco (7,8)\n",
-      "Veicolo 1: arco (8,10)\n",
-      "Veicolo 1: arco (10,1)\n",
-      "Veicolo 1: arco (1,3)\n",
-      "Veicolo 1: arco (3,6)\n",
-      "Veicolo 1: arco (6,2)\n",
-      "Veicolo 1: arco (2,5)\n",
-      "Costo totale: 50\n"
+      "[5]\n",
+      "[7, 8, 10, 1]\n",
+      "Veicolo 2: arco (7,8)\n",
+      "Veicolo 2: arco (8,10)\n",
+      "Veicolo 2: arco (10,1)\n",
+      "[6, 2, 4, 9]\n",
+      "Veicolo 2: arco (6,2)\n",
+      "Veicolo 2: arco (2,4)\n",
+      "Veicolo 2: arco (4,9)\n",
+      "[3]\n",
+      "Costo totale: 41\n"
      ]
     }
    ],
